==========
01/06/2009
==========

- bugfix c/ comportamento incorreto do controle de altura da area de queue
- marcacao de artigos do feed adicionados ao queue
- marcacao de entradas do queue para publicacao

HORAS TRABALHADAS: 6h

==========
02/06/2009
==========

- correcao dos scripts e backend; metodo de publicacao funcional

HORAS TRABALHADAS: 4h

==========
03/06/2009
==========

- inclusao de metodo observador de publicacao no queue
- atualizacao do status de publicacao (waiting, published, failed)
- bugfixes no cadastro de blog (password undefined) e cadastro de feed (radio option unchecked)

HORAS TRABALHADAS: 7h