@@ -18,15 +18,20 @@
 <div id="topbar">
 <div id="topleftbar"><nobr><ul>
 
+<?php $bc = count($this->blogs) ?>
+
 <li><?php B_Helper::a($this->translation()->dashboard, "dashboard") ?></li>
 <li><?php B_Helper::a($this->translation()->profile, "profile", "edit") ?></li>
 <li><?php B_Helper::a($this->translation()->blogs, "blog") ?></li>
+<?php if($bc>0) : ?>
 <li><?php B_Helper::a($this->translation()->feeds, "feed") ?></li>
+<?php endif ?>
+
 <li id="bloglstbar">
-<?php if(($i = count($this->blogs)) && $i == 1) : ?>
+<?php if($bc==1) : ?>
     <b><?php echo $this->translation()->application_blog ?>: </b><i><?php echo $this->blogs[0]->name ?></i>
     <input type="hidden" id="currentblog" value="<?php echo $this->blogs[0]->hash ?>">
-<?php elseif($i > 1) : ?>
+<?php elseif($bc > 1) : ?>
     <b><?php echo $this->translation()->blog ?>: </b>
     <select id="bloglstsel">
     <?php foreach($this->blogs as $c) : ?>
@@ -47,22 +52,6 @@
 
 <div id="maincontainer">
 <?php $this->renderTemplate() ?>
-</div>
-
-<div id="noblogmsg" class="b-dialog" style="display:none">
-<?php echo $this->translation()->no_blog ?>. <?php B_Helper::a(ucfirst($this->translation()->click_here), 'blog', 'add') ?> <?php echo $this->translation()->new_blog_instruction ?>.
-<hr>
-<div class="b-dialog-buttons">
-<a class="b-dialog-close"><?php echo $this->translation()->close ?></a>
-</div>
-</div>
-
-<div id="nofeedmsg" class="b-dialog" style="display:none">
-<?php echo $this->translation()->no_feed ?>. <?php B_Helper::a(ucfirst($this->translation()->click_here), 'feed', 'index') ?> <?php echo $this->translation()->new_feed_instruction ?>.
-<hr>
-<div class="b-dialog-buttons">
-<a class="b-dialog-close"><?php echo $this->translation()->close ?></a>
-</div>
 </div>
 
 </body>
