@@ -178,6 +178,7 @@ CREATE TABLE model_user_dashboard_setting
     name VARCHAR(100) NOT NULL,
     value VARCHAR(200) NOT NULL DEFAULT '',
     PRIMARY KEY (user_dashboard_setting_id),
+    CONSTRAINT m_bds_un UNIQUE (user_profile_id, context, name),
     CONSTRAINT m_uds_m_upf_fk FOREIGN KEY (user_profile_id) 
         REFERENCES model_user_profile (user_profile_id) ON DELETE CASCADE
 ) ENGINE=InnoDB DEFAULT CHARSET='utf8' COLLATE='utf8_bin';
